hetz/ingress/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: 65.108.254.233/32,65.108.157.113/32,65.21.147.177/32,95.217.156.196/32,135.181.33.2/32
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.spacemule.net
    secretName: argo-tls-secret
  rules:
  - host: argo.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
