hetz/ingress/local-sync.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-home-ingress
  namespace: wireguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  tls:
    - hosts:
        - home-sync.spacemule.net
      secretName: home-sync-tls-secret
  rules:
    - host: home-sync.spacemule.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-proxy-service
                port:
                  number: 8081
