hetz/ingress/pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: wireguard
spec:
  ingressClassName: nginx
  rules:
  - host: dns.spacemule.net
    http:
      paths:
      - path: /.well-known
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy-service
            port:
              number: 8081
