hetz/ingress/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: wireguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - test.spacemule.net
      secretName: test-spacemule-tls-secret
  rules:
    - host: test.spacemule.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-proxy-service
              port:
                number: 8081
