hetz/ingress/transmission.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  namespace: wireguard
spec:
  rules:
  - host: transmission.spacemule.net
    http:
      paths:
        - path: /.well-known
          pathType: Prefix
          backend:
            service:
              name: nginx-proxy-service
              port:
                number: 8081
